adding flower border

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
 <body id="home">
 
+    <img src="assets/images/border-left.png" class="left-border"/>
+    <img src="assets/images/border-right.png" class="right-border"/>
     <!-- start page-wrapper -->
     <div class="page-wrapper">
 
