--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <!-- Mirrored from themegeniuslab.com/html/pretty/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 30 Jan 2021 13:39:01 GMT -->
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +10,7 @@
     <meta name="author" content="irstheme">
 
     <title> Ashish Weds Diksha </title>
-    
+
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/flaticon.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -34,8 +35,6 @@
 
 <body id="home">
 
-    <img src="assets/images/border-left.png" class="left-border"/>
-    <img src="assets/images/border-right.png" class="right-border"/>
     <!-- start page-wrapper -->
     <div class="page-wrapper">
 
@@ -48,11 +47,11 @@
                 <i class="fi flaticon-favorite-heart-button"></i>
             </div>
         </div>
-        <!-- end preloader --> 
+        <!-- end preloader -->
 
 
         <!-- Start header -->
-        <header id="header" class="site-header header-style-2">
+        <!-- <header id="header" class="site-header header-style-2">
             <nav class="navigation navbar navbar-default">
                 <div class="container">
                     <div class="navbar-header">
@@ -72,14 +71,24 @@
                             <li><a href="#events">Events</a></li>
                             <li><a href="#people">People</a></li>
                             <li><a href="#gallery">Gallery</a></li>
-                        </ul>
-                    </div><!-- end of nav-collapse -->
-                </div><!-- end of container -->
-            </nav>
-        </header>
+                        </ul> -->
+        <!-- </div>end of nav-collapse -->
+        <!-- </div>end of container -->
+        <!-- </nav> -->
+        <!-- </header> -->
         <!-- end of header -->
 
-
+        <!-- start of ganesha section -->
+        <section class="hero-ganesha">
+            <div class="gnesha-img-container">
+                <img src="assets/images/ganesh.png" width="20" height="30" class="ganesha-img" />
+            </div>
+            <br/>
+            <div class="mantra-container">
+                <img src="assets/images/vakra-tunda.png" class="ganesha-mantra" width="0" />
+            </div>
+        </section>
+        <!-- end of ganesha section -->
         <!-- start of hero -->
         <section class="hero-slider hero-style-1">
             <div class="wedding-announcement">
@@ -91,14 +100,15 @@
 
             <div class="swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="slide-inner slide-bg-image" data-background="assets/images/slider/slide-1.jpg">
-                        </div> <!-- end slide-inner --> 
-                    </div> <!-- end swiper-slide -->
+                    <!-- <div class="swiper-slide"> -->
+                        <!-- <div class="slide-inner slide-bg-image" -->
+                            <!-- data-background="https://wallpapercave.com/wp/wp4475444.jpg"> -->
+                        <!-- </div> end slide-inner -->
+                    <!-- </div> end swiper-slide -->
 
                     <div class="swiper-slide">
-                        <div class="slide-inner slide-bg-image" data-background="assets/images/slider/slide-2.jpg">
-                        </div> <!-- end slide-inner --> 
+                        <div class="slide-inner slide-bg-image" data-background="assets/images/slider/slide-1.jpg">
+                        </div> <!-- end slide-inner -->
                     </div> <!-- end swiper-slide -->
                 </div>
                 <!-- end swiper-wrapper -->
@@ -145,30 +155,36 @@
                         <div class="couple-area clearfix">
                             <div class="text-grid bride">
                                 <h3>The bride</h3>
-                                <p>A bridecollection of textile samples lay spread out on the table Samsa was a travelling salesman and above it there hung a picture that he had recently cut out of an illustrated magazine and dholhos housed in a nice, gilded frame. It showed a lady fitted </p>
-                                <div class="social">
+                                <p>A bridecollection of textile samples lay spread out on the table Samsa was a
+                                    travelling salesman and above it there hung a picture that he had recently cut out
+                                    of an illustrated magazine and dholhos housed in a nice, gilded frame. It showed a
+                                    lady fitted </p>
+                                <!-- <div class="social">
                                     <ul>
                                         <li><a href="#"><i class="ti-facebook"></i></a></li>
                                         <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
                                         <li><a href="#"><i class="ti-instagram"></i></a></li>
                                         <li><a href="#"><i class="ti-pinterest"></i></a></li>
                                     </ul>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="middle-couple-pic">
                                 <img src="assets/images/couple.jpg" alt>
                             </div>
                             <div class="text-grid groom">
                                 <h3>The Groom</h3>
-                                <p>A bridecollection of textile samples lay spread out on the table Samsa was a travelling salesman and above it there hung a picture that he had recently cut out of an illustrated magazine and dholhos housed in a nice, gilded frame. It showed a lady fitted </p>
-                                <div class="social">
+                                <p>A bridecollection of textile samples lay spread out on the table Samsa was a
+                                    travelling salesman and above it there hung a picture that he had recently cut out
+                                    of an illustrated magazine and dholhos housed in a nice, gilded frame. It showed a
+                                    lady fitted </p>
+                                <!-- <div class="social">
                                     <ul>
                                         <li><a href="#"><i class="ti-facebook"></i></a></li>
                                         <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
                                         <li><a href="#"><i class="ti-instagram"></i></a></li>
                                         <li><a href="#"><i class="ti-pinterest"></i></a></li>
                                     </ul>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -200,8 +216,11 @@
                                     <li><i class="ti-location-pin"></i> Hotel, muli International Austria</li>
                                     <li><i class="ti-time"></i> Feb 13, 2020 (10Am - 1AM)</li>
                                 </ul>
-                                <p>Recently cut out of an illustrated magazine and housed in a nice, gilded frame. It showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy fur muff that covered the whole of her</p>
-                                <a class="see-location-btn popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.072217139369!2d90.40632831544468!3d23.816030892181896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c6feb6c1b7b1%3A0x76350c55ebc50c34!2sRadisson%20Blu%20Dhaka%20Water%20Garden!5e0!3m2!1sen!2sbd!4v1566623079021!5m2!1sen!2sbd">
+                                <p>Recently cut out of an illustrated magazine and housed in a nice, gilded frame. It
+                                    showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy
+                                    fur muff that covered the whole of her</p>
+                                <a class="see-location-btn popup-gmaps"
+                                    href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.072217139369!2d90.40632831544468!3d23.816030892181896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c6feb6c1b7b1%3A0x76350c55ebc50c34!2sRadisson%20Blu%20Dhaka%20Water%20Garden!5e0!3m2!1sen!2sbd!4v1566623079021!5m2!1sen!2sbd">
                                     See location <i class="fa fa-angle-right"></i>
                                 </a>
                             </div>
@@ -214,8 +233,11 @@
                                     <li><i class="ti-location-pin"></i> Hotel, muli International Austria</li>
                                     <li><i class="ti-time"></i> Feb 13, 2020 (10Am - 1AM)</li>
                                 </ul>
-                                <p>Recently cut out of an illustrated magazine and housed in a nice, gilded frame. It showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy fur muff that covered the whole of her</p>
-                                <a class="see-location-btn popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.072217139369!2d90.40632831544468!3d23.816030892181896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c6feb6c1b7b1%3A0x76350c55ebc50c34!2sRadisson%20Blu%20Dhaka%20Water%20Garden!5e0!3m2!1sen!2sbd!4v1566623079021!5m2!1sen!2sbd">
+                                <p>Recently cut out of an illustrated magazine and housed in a nice, gilded frame. It
+                                    showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy
+                                    fur muff that covered the whole of her</p>
+                                <a class="see-location-btn popup-gmaps"
+                                    href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.072217139369!2d90.40632831544468!3d23.816030892181896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c6feb6c1b7b1%3A0x76350c55ebc50c34!2sRadisson%20Blu%20Dhaka%20Water%20Garden!5e0!3m2!1sen!2sbd!4v1566623079021!5m2!1sen!2sbd">
                                     See location <i class="fa fa-angle-right"></i>
                                 </a>
                             </div>
@@ -227,7 +249,7 @@
         <!-- end wedding-location-section -->
 
         <!-- start groomsmen-bridesmaid section -->
-        <section class="groomsmen-bridesmaid section-padding" id="people">
+        <!-- <section class="groomsmen-bridesmaid section-padding" id="people">
             <div class="container">
                 <div class="row">
                     <div class="col col-xs-12">
@@ -361,9 +383,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div> <!-- end container -->
-        </section>
+                </div> -->
+        <!-- </div> end container -->
+        <!-- </section> -->
         <!-- end groomsmen-bridesmaid section -->
 
 
@@ -416,7 +438,8 @@
                                 </a>
                             </div>
                             <div class="grid">
-                                <a href="https://www.youtube.com/embed/7GWSl1GQSSc" data-type="iframe" class="video-play-btn">
+                                <a href="https://www.youtube.com/embed/7GWSl1GQSSc" data-type="iframe"
+                                    class="video-play-btn">
                                     <img src="assets/images/gallery/img-8.jpg" alt class="img img-responsive">
                                     <i class="ti ti-control-play"></i>
                                 </a>
@@ -464,7 +487,21 @@
 
     <!-- Custom script for this template -->
     <script src="assets/js/script.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('img.ganesha-img').animate({
+                opacity: '1',
+                width: '100px',
+                height: '200px'
+            }, 6000);
+            $('img.ganesha-mantra').animate({
+                opacity: '1',
+                width: '80%'
+            }, 8000);
+        });
+    </script>
 </body>
 
 <!-- Mirrored from themegeniuslab.com/html/pretty/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 30 Jan 2021 13:39:50 GMT -->
+
 </html>
