--- a/index.html
+++ b/index.html
@@ -48,82 +48,25 @@
             </div>
         </div>
         <!-- end preloader -->
-
-
-        <!-- Start header -->
-        <!-- <header id="header" class="site-header header-style-2">
-            <nav class="navigation navbar navbar-default">
-                <div class="container">
-                    <div class="navbar-header">
-                        <button type="button" class="open-btn">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="index.html">Ashish <i class="fi flaticon-spring"></i> Diksha</a>
-                    </div>
-                    <div id="navbar" class="navbar-collapse collapse navbar-right navigation-holder">
-                        <button class="close-navbar"><i class="ti-close"></i></button>
-                        <ul class="nav navbar-nav">
-                            <li><a href="javascript:void(0);">Home</a></li>
-                            <li><a href="#couple">Couple</a></li>
-                            <li><a href="#events">Events</a></li>
-                            <li><a href="#people">People</a></li>
-                            <li><a href="#gallery">Gallery</a></li>
-                        </ul> -->
-        <!-- </div>end of nav-collapse -->
-        <!-- </div>end of container -->
-        <!-- </nav> -->
-        <!-- </header> -->
-        <!-- end of header -->
-
+        <div class="top-border">
+            <img src="assets/images/border-top.png" />
+        </div>
         <!-- start of ganesha section -->
         <section class="hero-ganesha">
             <div class="gnesha-img-container">
-                <img src="assets/images/ganesh.png" width="20" height="30" class="ganesha-img" />
+                <img src="assets/images/ganesh.png" width="100%" height="100%" class="ganesha-img" />
+            </div>
+            <br />
+            <div class="mantra-container">
+                <img src="assets/images/vakra-tunda.png" class="ganesha-mantra" width="100%" />
             </div>
             <br/>
-            <div class="mantra-container">
-                <img src="assets/images/vakra-tunda.png" class="ganesha-mantra" width="0" />
+            <br/>
+            <div class="wedd-img">
+                <img src="assets/images/wedding.png" />
             </div>
         </section>
         <!-- end of ganesha section -->
-        <!-- start of hero -->
-        <section class="hero-slider hero-style-1">
-            <div class="wedding-announcement">
-                <div class="couple-text">
-                    <h3 id="curve-text">We're Getting Married</h3>
-                    <h2 class="wow slideInUp couple-name" data-wow-duration="1s">Ashish &amp; Diksha</h2>
-                </div>
-            </div>
-
-            <div class="swiper-container">
-                <div class="swiper-wrapper">
-                    <!-- <div class="swiper-slide"> -->
-                        <!-- <div class="slide-inner slide-bg-image" -->
-                            <!-- data-background="https://wallpapercave.com/wp/wp4475444.jpg"> -->
-                        <!-- </div> end slide-inner -->
-                    <!-- </div> end swiper-slide -->
-
-                    <div class="swiper-slide">
-                        <div class="slide-inner slide-bg-image" data-background="assets/images/slider/slide-1.jpg">
-                        </div> <!-- end slide-inner -->
-                    </div> <!-- end swiper-slide -->
-                </div>
-                <!-- end swiper-wrapper -->
-
-                <!-- swipper controls -->
-                <div class="swiper-pagination"></div>
-                <div class="next-prev-btn">
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
-                </div>
-            </div>
-        </section>
-        <!-- end of hero slider -->
-
-
         <!-- start wedding-date -->
         <section class="wedding-date section-padding">
             <div class="container">
@@ -155,36 +98,12 @@
                         <div class="couple-area clearfix">
                             <div class="text-grid bride">
                                 <h3>The bride</h3>
-                                <p>A bridecollection of textile samples lay spread out on the table Samsa was a
-                                    travelling salesman and above it there hung a picture that he had recently cut out
-                                    of an illustrated magazine and dholhos housed in a nice, gilded frame. It showed a
-                                    lady fitted </p>
-                                <!-- <div class="social">
-                                    <ul>
-                                        <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                        <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                        <li><a href="#"><i class="ti-instagram"></i></a></li>
-                                        <li><a href="#"><i class="ti-pinterest"></i></a></li>
-                                    </ul>
-                                </div> -->
                             </div>
                             <div class="middle-couple-pic">
                                 <img src="assets/images/couple.jpg" alt>
                             </div>
                             <div class="text-grid groom">
                                 <h3>The Groom</h3>
-                                <p>A bridecollection of textile samples lay spread out on the table Samsa was a
-                                    travelling salesman and above it there hung a picture that he had recently cut out
-                                    of an illustrated magazine and dholhos housed in a nice, gilded frame. It showed a
-                                    lady fitted </p>
-                                <!-- <div class="social">
-                                    <ul>
-                                        <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                        <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                        <li><a href="#"><i class="ti-instagram"></i></a></li>
-                                        <li><a href="#"><i class="ti-pinterest"></i></a></li>
-                                    </ul>
-                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -216,13 +135,6 @@
                                     <li><i class="ti-location-pin"></i> Hotel, muli International Austria</li>
                                     <li><i class="ti-time"></i> Feb 13, 2020 (10Am - 1AM)</li>
                                 </ul>
-                                <p>Recently cut out of an illustrated magazine and housed in a nice, gilded frame. It
-                                    showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy
-                                    fur muff that covered the whole of her</p>
-                                <a class="see-location-btn popup-gmaps"
-                                    href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.072217139369!2d90.40632831544468!3d23.816030892181896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c6feb6c1b7b1%3A0x76350c55ebc50c34!2sRadisson%20Blu%20Dhaka%20Water%20Garden!5e0!3m2!1sen!2sbd!4v1566623079021!5m2!1sen!2sbd">
-                                    See location <i class="fa fa-angle-right"></i>
-                                </a>
                             </div>
                             <div class="grid">
                                 <div class="img-holder">
@@ -233,13 +145,6 @@
                                     <li><i class="ti-location-pin"></i> Hotel, muli International Austria</li>
                                     <li><i class="ti-time"></i> Feb 13, 2020 (10Am - 1AM)</li>
                                 </ul>
-                                <p>Recently cut out of an illustrated magazine and housed in a nice, gilded frame. It
-                                    showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy
-                                    fur muff that covered the whole of her</p>
-                                <a class="see-location-btn popup-gmaps"
-                                    href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.072217139369!2d90.40632831544468!3d23.816030892181896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c6feb6c1b7b1%3A0x76350c55ebc50c34!2sRadisson%20Blu%20Dhaka%20Water%20Garden!5e0!3m2!1sen!2sbd!4v1566623079021!5m2!1sen!2sbd">
-                                    See location <i class="fa fa-angle-right"></i>
-                                </a>
                             </div>
                         </div>
                     </div>
@@ -247,147 +152,6 @@
             </div>
         </section>
         <!-- end wedding-location-section -->
-
-        <!-- start groomsmen-bridesmaid section -->
-        <!-- <section class="groomsmen-bridesmaid section-padding" id="people">
-            <div class="container">
-                <div class="row">
-                    <div class="col col-xs-12">
-                        <div class="section-title">
-                            <h2>Groomsmen & Bridesmaid</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col col-xs-12">
-                        <div class="groomsmen-bridesmaid-grids clearfix">
-                            <div class="grid">
-                                <div class="img-holder">
-                                    <img src="assets/images/groomsmen/img-1.jpg" alt>
-                                </div>
-                                <div class="details">
-                                    <h4>Michel Hon</h4>
-                                    <p>Best Man</p>
-                                    <ul>
-                                        <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                        <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                        <li><a href="#"><i class="ti-instagram"></i></a></li>
-                                        <li><a href="#"><i class="ti-pinterest"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="grid">
-                                <div class="img-holder">
-                                    <img src="assets/images/groomsmen/img-2.jpg" alt>
-                                </div>
-                                <div class="details">
-                                    <h4>Doller Jhon</h4>
-                                    <p>Best friend</p>
-                                    <ul>
-                                        <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                        <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                        <li><a href="#"><i class="ti-instagram"></i></a></li>
-                                        <li><a href="#"><i class="ti-pinterest"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="grid">
-                                <div class="img-holder">
-                                    <img src="assets/images/groomsmen/img-3.jpg" alt>
-                                </div>
-                                <div class="details">
-                                    <h4>Amrshal dow</h4>
-                                    <p>Friend</p>
-                                    <ul>
-                                        <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                        <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                        <li><a href="#"><i class="ti-instagram"></i></a></li>
-                                        <li><a href="#"><i class="ti-pinterest"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="grid">
-                                <div class="img-holder">
-                                    <img src="assets/images/groomsmen/img-4.jpg" alt>
-                                </div>
-                                <div class="details">
-                                    <h4>Bhogel New</h4>
-                                    <p>Friend</p>
-                                    <ul>
-                                        <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                        <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                        <li><a href="#"><i class="ti-instagram"></i></a></li>
-                                        <li><a href="#"><i class="ti-pinterest"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="grid">
-                                <div class="img-holder">
-                                    <img src="assets/images/bridesmaid/img-1.jpg" alt>
-                                </div>
-                                <div class="details">
-                                    <h4>Michel Hon</h4>
-                                    <p>Best Man</p>
-                                    <ul>
-                                        <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                        <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                        <li><a href="#"><i class="ti-instagram"></i></a></li>
-                                        <li><a href="#"><i class="ti-pinterest"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="grid">
-                                <div class="img-holder">
-                                    <img src="assets/images/bridesmaid/img-2.jpg" alt>
-                                </div>
-                                <div class="details">
-                                    <h4>Doller Jhon</h4>
-                                    <p>Best friend</p>
-                                    <ul>
-                                        <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                        <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                        <li><a href="#"><i class="ti-instagram"></i></a></li>
-                                        <li><a href="#"><i class="ti-pinterest"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="grid">
-                                <div class="img-holder">
-                                    <img src="assets/images/bridesmaid/img-3.jpg" alt>
-                                </div>
-                                <div class="details">
-                                    <h4>Amrshal dow</h4>
-                                    <p>Friend</p>
-                                    <ul>
-                                        <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                        <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                        <li><a href="#"><i class="ti-instagram"></i></a></li>
-                                        <li><a href="#"><i class="ti-pinterest"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="grid">
-                                <div class="img-holder">
-                                    <img src="assets/images/bridesmaid/img-4.jpg" alt>
-                                </div>
-                                <div class="details">
-                                    <h4>Bhogel New</h4>
-                                    <p>Friend</p>
-                                    <ul>
-                                        <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                        <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                        <li><a href="#"><i class="ti-instagram"></i></a></li>
-                                        <li><a href="#"><i class="ti-pinterest"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-        <!-- </div> end container -->
-        <!-- </section> -->
-        <!-- end groomsmen-bridesmaid section -->
-
 
         <!-- start gallery-section -->
         <section class="gallery-section section-padding" id="gallery">
@@ -462,15 +226,20 @@
                                 <h2>Ashish <br>& <br>Diksha</h2>
                             </div>
                             <h3>Forever our love, Thank you</h3>
-                            <p>Copyright 2021</p>
                         </div>
                     </div>
                 </div>
             </div> <!-- end container -->
         </footer>
+        <div class="bottom-border">
+            <img src="assets/images/border-top.png" />
+        </div>
         <!-- end footer-section -->
-
-
+        <div class="left-scroll"></div>
+        <div class="right-scroll"></div>
+        <div class="hang-left"><img src="assets/images/right-side.png"></div>
+        <div class="hang-right"><img src="assets/images/right-side.png"></div>
+        
     </div>
     <!-- end of page-wrapper -->
 
@@ -491,12 +260,9 @@
         $(document).ready(function () {
             $('img.ganesha-img').animate({
                 opacity: '1',
-                width: '100px',
-                height: '200px'
             }, 6000);
             $('img.ganesha-mantra').animate({
                 opacity: '1',
-                width: '80%'
             }, 8000);
         });
     </script>
